<resources>
    <string name="client_id">846703774795-di8vq663skfsqla2k4ekk66mu7716ko4.apps.googleusercontent.com</string>

    <!--    facebook login thing-->
    <string name="facebook_app_id">434319368165935</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">EAAGLAtuomi8BAEeor3sCf2Uez78uY3iI6XIjzBfxsyP4Pp6aP72Pw5ouOMmjIsKA0escVmTUXXiXZB0h2lj2BsTiLlzdtmsfNqQYjZB2A5ZAxxSoKFA7xeit1ymXs22DOGzWkMSrlszkB1d1cRzSIxazZATGpKbxZBQi1MJUyEB2geyMFRj34OcgXtKvkIMiRzBVSSLDZCBhZCSHnVIP6uOWsJ93EhCDmc2msDGtfxbW5B2aJjRZA9tw</string>

    <!--    google login thing-->
    <string name="firebase_web_client_id">159870854240-7rfsinj3tv5j831r6av83j41oqv0722d.apps.googleusercontent.com</string>
    <string name="google_web_client_id">846703774795-h101ia5u8o4fm43era8ipn3nlnh2nm2u.apps.googleusercontent.com</string>


    <string name="app_name">Pixel Meet</string>
    <string name="welcome_to_pixel_meet">Welcome to Pixel Meet Stranger</string>
    <string name="app_description1">Pixel meet is intended for any person from the age of 18 years. It is a meeting platform with certain extras. After creating an account we recommend to read the short tutorial. It will help you in short steps how Pixel Meet, Pixel token and the earning system works.</string>
    <string name="app_description2">Be fair, be respectful and don\'t be a spoiler. enjoy the community and spread joy to all. In the rules section you will find rules and measures.</string>
    <string name="have_fun">Have Fun</string>
    <string name="enter">Enter</string>
    <string name="login_desc">A NEW WAY TO MEET STRANGERS. FIND SOME LOVE, Friends OR JUST FUN</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="city">City</string>
    <string name="town">Town</string>
    <string name="country">Country</string>
    <string name="date">Date</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="prologue">Prologue</string>
    <string name="profession">Profession</string>
    <string name="DOB">Date of Birth</string>
    <string name="login">Login</string>
    <string name="location">Location</string>
    <string name="figure">Figure</string>
    <string name="eye_color">Eye Colour</string>
    <string name="hair_style">Hair Style</string>
    <string name="height">Height</string>
    <string name="religion">Religion</string>
    <string name="hobby">Hobby</string>
    <string name="smoking">Smoking</string>
    <string name="bio">Bio</string>
    <string name="password">Password</string>
    <string name="settings">Settings</string>
    <string name="messages">Message</string>
    <string name="config">Configuration</string>
    <string name="home">Home</string>
    <string name="free_coins">Free Coins</string>
    <string name="match">Match</string>
    <string name="collect">Collect</string>
    <string name="profile">Profile</string>
    <string name="market_place">MarketPlace</string>
    <string name="swipe">Swipe It</string>
    <string name="picks_available">Picks Available</string>
    <string name="next_free_coin">Next free coin In</string>
    <string name="lounge">Lounge</string>
    <string name="wallet">Wallet</string>
    <string name="support_and_contact">Support and Contact</string>
    <string name="quests">Quests</string>
    <string name="inventory">Inventory</string>
    <string name="menu">Menu</string>
    <string name="info">INFO</string>
    <string name="about_me">About Me</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>