<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MenuFragment">


    <ImageView
        android:id="@+id/plate_background_menu_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="225dp"
            android:layout_height="30dp"
            android:layout_margin="8dp"
            android:background="@drawable/round_button_bg"
            android:fontFamily="@font/robotomonoregular"
            android:text="@string/lounge"
            android:textColor="@color/white"
            android:id="@+id/menu_lounge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/menu_profile"
            android:layout_width="225dp"
            android:layout_height="30dp"
            android:layout_margin="8dp"
            android:background="@drawable/round_button_bg"
            android:fontFamily="@font/robotomonoregular"
            android:text="@string/profile"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu_lounge" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/menu_settings"
            android:layout_width="225dp"
            android:layout_height="30dp"
            android:layout_margin="8dp"
            android:background="@drawable/round_button_bg"
            android:fontFamily="@font/robotomonoregular"
            android:text="@string/settings"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu_lounge" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/menu_wallet"
            android:layout_width="225dp"
            android:layout_height="30dp"
            android:layout_margin="8dp"
            android:background="@drawable/round_button_bg"
            android:fontFamily="@font/robotomonoregular"
            android:text="@string/wallet"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu_lounge" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/menu_inventory"
            android:layout_width="225dp"
            android:layout_height="30dp"
            android:layout_margin="8dp"
            android:background="@drawable/round_button_bg"
            android:fontFamily="@font/robotomonoregular"
            android:text="@string/inventory"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu_lounge" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/menu_quests"
            android:layout_width="225dp"
            android:layout_height="30dp"
            android:layout_margin="8dp"
            android:background="@drawable/round_button_bg"
            android:fontFamily="@font/robotomonoregular"
            android:text="@string/quests"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu_lounge" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/menu_contact_and_support"
            android:layout_width="225dp"
            android:layout_height="30dp"
            android:layout_margin="8dp"
            android:background="@drawable/round_button_bg"
            android:fontFamily="@font/robotomonoregular"
            android:text="@string/support_and_contact"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu_lounge" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>