<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background1"
        tools:layout_editor_absoluteX="-44dp"
        tools:layout_editor_absoluteY="-124dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="84dp"

            android:layout_weight="3"
            android:text="@string/welcome_to_pixel_meet"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rechteck01"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:layout_margin="24dp"
        android:orientation="vertical"
        android:id="@+id/linear_layout_login_activity_background">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/login_desc"
            android:textColor="@color/white"
            android:fontFamily="@font/robotomonoregular"
            android:textSize="12sp"
            android:layout_margin="24dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_login_activity_background"
        tools:layout_editor_absoluteX="24dp">

        <TextView
            android:id="@+id/login_activity_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/white_button"
            android:fontFamily="@font/robotomonoregular"
            android:padding="12dp"
            android:textColor="@color/black"
            android:text="@string/email"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/login_activity_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/red_button"
            android:fontFamily="@font/robotomonoregular"
            android:padding="12dp"
            android:text="@string/google"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/login_activity_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/blue_background"
            android:fontFamily="@font/robotomonoregular"
            android:padding="12dp"
            android:text="@string/facebook"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </LinearLayout>

    <TextView
        android:id="@+id/login_activity_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotomonobold"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:padding="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />



</androidx.constraintlayout.widget.ConstraintLayout>