<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background1"
        tools:layout_editor_absoluteX="-48dp"
        tools:layout_editor_absoluteY="357dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="84dp"
            android:layout_weight="3"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/screen_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="48dp"
        android:background="@drawable/rechteck01"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">





        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:padding="24dp"
            android:textColorHint="@color/white" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/DOB"
            android:padding="24dp"
            android:textColorHint="@color/white" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:padding="24dp"
            android:textColorHint="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:hint="@string/location"
                android:padding="24dp"
                android:textColorHint="@color/white"
                android:layout_margin="2dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="24dp"
                android:src="@drawable/ic_baseline_location_on_24"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/screen_two"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="48dp"
        android:background="@drawable/rechteck01"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:text="@string/gender"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:padding="22dp"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:padding="24dp"
            android:textColorHint="@color/white" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/DOB"
            android:padding="24dp"
            android:textColorHint="@color/white" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:padding="24dp"
            android:textColorHint="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_weight="9"
                android:hint="@string/location"
                android:padding="24dp"
                android:textColorHint="@color/white"
                android:layout_margin="2dp"/>
            <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_weight="1"
                android:padding="2dp"
                android:src="@drawable/ic_baseline_location_on_24"/>
        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/dots_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="72dp"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="56dp">
        <ImageView
            android:id="@+id/img_register_prev"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/gray_background"
            android:src="@drawable/back_arrow"
            android:padding="8dp"
            android:layout_margin="4dp"
            android:visibility="gone"/>
        <ImageView
            android:id="@+id/img_register_next"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/gray_background"
            android:src="@drawable/front_arrow"
            android:padding="8dp"
            android:layout_margin="4dp"/>


    </LinearLayout>

    <TextView
        android:id="@+id/register_activity_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotomonobold"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="24dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>